
syntax = "proto3";

package product;

option go_package = "github.com/Tanakaryuki/go-grpc/api/product;product";

import "google/api/annotations.proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/v1/products"
      body: "*"
    };
  }
  rpc GetProduct (GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/products/{id}"
    };
  }
}

message CreateProductRequest {
  string name = 1;
  float price = 2;
}

message CreateProductResponse {
  string id = 1;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  float price = 3;
}